<resources>
    <string name="app_name">Test project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tips">TIPS</string>
    <string name="phone_number">Phone number</string>
    <string name="pass">Password</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="continue_btn">Continue</string>
    <string name="sing_in">Sing in</string>
    <string name="profile">Profile</string>
    <string name="error_message">Something went wrong. Check the entered data</string>
    <string name="error_input_message">Enter correct data</string>
</resources>